Start translating KDE Plasma 5.23

--- a/sources/news/20210823 KDE Plasma 5.23 - New Features and Release Dates.md
+++ b/sources/news/20210823 KDE Plasma 5.23 - New Features and Release Dates.md
@@ -2,7 +2,7 @@
 [#]: via: "https://www.debugpoint.com/2021/08/kde-plasma-5-23/"
 [#]: author: "Arindam https://www.debugpoint.com/author/admin1/"
 [#]: collector: "lujun9972"
-[#]: translator: " "
+[#]: translator: "imgradeone"
 [#]: reviewer: " "
 [#]: publisher: " "
 [#]: url: " "
