--- a/published/20210823 KDE Plasma 5.23 - New Features and Release Dates.md
+++ b/published/20210823 KDE Plasma 5.23 - New Features and Release Dates.md
@@ -4,8 +4,8 @@
 [#]: collector: "lujun9972"
 [#]: translator: "imgradeone"
 [#]: reviewer: "wxy"
-[#]: publisher: " "
-[#]: url: " "
+[#]: publisher: "wxy"
+[#]: url: "https://linux.cn/article-13719-1.html"
 
 KDE Plasma 5.23 的新功能和发布日期
 ======
