--- a/sources/news/20210907 OpenWrt 21.02 Arrives With Linux Kernel 5.4 - WPA3 Support.md
+++ b/sources/news/20210907 OpenWrt 21.02 Arrives With Linux Kernel 5.4 - WPA3 Support.md
@@ -2,7 +2,7 @@
 [#]: via: "https://news.itsfoss.com/openwrt-21-02-release/"
 [#]: author: "Rishabh Moharir https://news.itsfoss.com/author/rishabh/"
 [#]: collector: "lujun9972"
-[#]: translator: " "
+[#]: translator: "wxy"
 [#]: reviewer: " "
 [#]: publisher: " "
 [#]: url: " "
