--- a/published/20210907 OpenWrt 21.02 Arrives With Linux Kernel 5.4 - WPA3 Support.md
+++ b/published/20210907 OpenWrt 21.02 Arrives With Linux Kernel 5.4 - WPA3 Support.md
@@ -4,8 +4,8 @@
 [#]: collector: "lujun9972"
 [#]: translator: "wxy"
 [#]: reviewer: "wxy"
-[#]: publisher: " "
-[#]: url: " "
+[#]: publisher: "wxy"
+[#]: url: "https://linux.cn/article-13763-1.html"
 
 OpenWrt 21.02 发布，支持 Linux 内核 5.4 和 WPA3
 ======
