--- a/sources/news/20210916 Kali Linux 2021.3 Brings in Kali Live VM Support, New Tools, and Other Improvements.md
+++ b/sources/news/20210916 Kali Linux 2021.3 Brings in Kali Live VM Support, New Tools, and Other Improvements.md
@@ -2,7 +2,7 @@
 [#]: via: "https://news.itsfoss.com/kali-linux-2021-3-release/"
 [#]: author: "Omar Maarof https://news.itsfoss.com/author/omar/"
 [#]: collector: "lujun9972"
-[#]: translator: " "
+[#]: translator: "wxy"
 [#]: reviewer: " "
 [#]: publisher: " "
 [#]: url: " "
