--- a/published/20210916 Kali Linux 2021.3 Brings in Kali Live VM Support, New Tools, and Other Improvements.md
+++ b/published/20210916 Kali Linux 2021.3 Brings in Kali Live VM Support, New Tools, and Other Improvements.md
@@ -3,9 +3,9 @@
 [#]: author: "Omar Maarof https://news.itsfoss.com/author/omar/"
 [#]: collector: "lujun9972"
 [#]: translator: "wxy"
-[#]: reviewer: " "
-[#]: publisher: " "
-[#]: url: " "
+[#]: reviewer: "wxy"
+[#]: publisher: "wxy"
+[#]: url: "https://linux.cn/article-13798-1.html"
 
 Kali Linux 2021.3 的新改进
 ======
