--- a/sources/news/20211014 KDE Plasma 5.23 Release Marks its 25th Anniversary With Exciting Improvements.md
+++ b/sources/news/20211014 KDE Plasma 5.23 Release Marks its 25th Anniversary With Exciting Improvements.md
@@ -2,7 +2,7 @@
 [#]: via: "https://news.itsfoss.com/kde-plasma-5-23-release/"
 [#]: author: "Jacob Crume https://news.itsfoss.com/author/jacob/"
 [#]: collector: "lujun9972"
-[#]: translator: " "
+[#]: translator: "wxy"
 [#]: reviewer: " "
 [#]: publisher: " "
 [#]: url: " "
