--- a/published/20211014 KDE Plasma 5.23 Release Marks its 25th Anniversary With Exciting Improvements.md
+++ b/published/20211014 KDE Plasma 5.23 Release Marks its 25th Anniversary With Exciting Improvements.md
@@ -4,8 +4,8 @@
 [#]: collector: "lujun9972"
 [#]: translator: "wxy"
 [#]: reviewer: "wxy"
-[#]: publisher: " "
-[#]: url: " "
+[#]: publisher: "wxy"
+[#]: url: "https://linux.cn/article-13885-1.html"
 
 纪念 25 周年：KDE Plasma 5.23 发布
 ======
