--- a/published/20211125 Endless OS 4.0 is a Long-Term Support Version with Usability Improvements.md
+++ b/published/20211125 Endless OS 4.0 is a Long-Term Support Version with Usability Improvements.md
@@ -4,8 +4,8 @@
 [#]: collector: "lujun9972"
 [#]: translator: "wxy"
 [#]: reviewer: "wxy"
-[#]: publisher: " "
-[#]: url: " "
+[#]: publisher: "wxy"
+[#]: url: "https://linux.cn/article-14024-1.html"
 
 没有终点的操作系统 Endless OS 发布 4.0 LTS
 ======
