--- a/published/20211202 Vivaldi 5.0 Brings Two-Level Tabs to Android - Adds New Features for Desktop.md
+++ b/published/20211202 Vivaldi 5.0 Brings Two-Level Tabs to Android - Adds New Features for Desktop.md
@@ -4,8 +4,8 @@
 [#]: collector: "lujun9972"
 [#]: translator: "wxy"
 [#]: reviewer: "wxy"
-[#]: publisher: " "
-[#]: url: " "
+[#]: publisher: "wxy"
+[#]: url: "https://linux.cn/article-14044-1.html"
 
 Vivaldi 5.0 发布！
 =====
