--- a/published/20211215 Pop-_OS 21.10 Introduces a New Application Library, GNOME 40, and a Refresh Install Option.md
+++ b/published/20211215 Pop-_OS 21.10 Introduces a New Application Library, GNOME 40, and a Refresh Install Option.md
@@ -4,8 +4,8 @@
 [#]: collector: "lujun9972"
 [#]: translator: "wxy"
 [#]: reviewer: "wxy"
-[#]: publisher: " "
-[#]: url: " "
+[#]: publisher: "wxy"
+[#]: url: "https://linux.cn/article-14083-1.html"
 
 
 Pop!_OS 21.10 发布！
