--- a/sources/news/20220104 Pinta 2.0 is a Major Upgrade With GTK 3 Port and Improved HiDPI Support.md
+++ b/sources/news/20220104 Pinta 2.0 is a Major Upgrade With GTK 3 Port and Improved HiDPI Support.md
@@ -2,7 +2,7 @@
 [#]: via: "https://news.itsfoss.com/pinta-2-0-release/"
 [#]: author: "Rishabh Moharir https://news.itsfoss.com/author/rishabh/"
 [#]: collector: "lujun9972"
-[#]: translator: " "
+[#]: translator: "wxy"
 [#]: reviewer: " "
 [#]: publisher: " "
 [#]: url: " "
