--- a/published/20220104 Pinta 2.0 is a Major Upgrade With GTK 3 Port and Improved HiDPI Support.md
+++ b/published/20220104 Pinta 2.0 is a Major Upgrade With GTK 3 Port and Improved HiDPI Support.md
@@ -4,8 +4,8 @@
 [#]: collector: "lujun9972"
 [#]: translator: "wxy"
 [#]: reviewer: "wxy"
-[#]: publisher: " "
-[#]: url: " "
+[#]: publisher: "wxy"
+[#]: url: "https://linux.cn/article-14150-1.html"
 
 Pinta 2.0 发布，移植到 GTK 3，改进了 HiDPI 支持
 ======
