--- a/sources/news/20220106 Linux Mint 20.3 -Una- Releases With Cinnamon 5.2, Theme Refresh, and a New Document Manager.md
+++ b/sources/news/20220106 Linux Mint 20.3 -Una- Releases With Cinnamon 5.2, Theme Refresh, and a New Document Manager.md
@@ -2,7 +2,7 @@
 [#]: via: "https://news.itsfoss.com/linux-mint-20-3-una-release/"
 [#]: author: "Ankush Das https://news.itsfoss.com/author/ankush/"
 [#]: collector: "lujun9972"
-[#]: translator: " "
+[#]: translator: "wxy"
 [#]: reviewer: " "
 [#]: publisher: " "
 [#]: url: " "
