--- a/published/20220106 Linux Mint 20.3 -Una- Releases With Cinnamon 5.2, Theme Refresh, and a New Document Manager.md
+++ b/published/20220106 Linux Mint 20.3 -Una- Releases With Cinnamon 5.2, Theme Refresh, and a New Document Manager.md
@@ -3,9 +3,9 @@
 [#]: author: "Ankush Das https://news.itsfoss.com/author/ankush/"
 [#]: collector: "lujun9972"
 [#]: translator: "wxy"
-[#]: reviewer: " "
-[#]: publisher: " "
-[#]: url: " "
+[#]: reviewer: "wxy"
+[#]: publisher: "wxy"
+[#]: url: "https://linux.cn/article-14155-1.html"
 
 Linux Mint 20.3 “Una” 发布
 ======
