--- a/sources/tech/20220107 Try FreeDOS in 2022.md
+++ b/sources/tech/20220107 Try FreeDOS in 2022.md
@@ -2,7 +2,7 @@
 [#]: via: "https://opensource.com/article/22/1/try-freedos"
 [#]: author: "Jim Hall https://opensource.com/users/jim-hall"
 [#]: collector: "lujun9972"
-[#]: translator: " "
+[#]: translator: "geekpi"
 [#]: reviewer: " "
 [#]: publisher: " "
 [#]: url: " "
