--- a/published/20220108 Brave vs. Google Chrome- Which is the better browser for you.md
+++ b/published/20220108 Brave vs. Google Chrome- Which is the better browser for you.md
@@ -4,8 +4,8 @@
 [#]: collector: "lujun9972"
 [#]: translator: "wxy"
 [#]: reviewer: "wxy"
-[#]: publisher: " "
-[#]: url: " "
+[#]: publisher: "wxy"
+[#]: url: "https://linux.cn/article-14213-1.html"
 
 Brave vs. Google Chrome：哪个浏览器更适合你？
 ======
@@ -64,7 +64,7 @@ Google Chrome 也基于 Chromium，但它添加了几个专有元素，使其成
 
 你应该会发现两个浏览器的所有基本功能都是相似的。
 
-但是，两者之间存在一些显着差异。
+但是，两者之间存在一些显著差异。
 
 如上所述，你会注意到自定义外观的能力存在差异。
 
@@ -72,7 +72,7 @@ Google Chrome 也基于 Chromium，但它添加了几个专有元素，使其成
 
 ![][11]
 
-使用 Google Chrome，你可以快速登录你的 Google 帐户并将所有内容同步到你的手机和其他设备。
+使用 Google Chrome，你可以快速登录你的 Google 账户并将所有内容同步到你的手机和其他设备。
 
 Brave 也可以让你同步，但对某些人来说可能不方便。你需要访问你已经使用 Brave 成功同步的设备之一。
 
