--- a/sources/news/20220209 Vivaldi 5.1 Introduces Horizontal Scrollable Tabs and a New Reading List.md
+++ b/sources/news/20220209 Vivaldi 5.1 Introduces Horizontal Scrollable Tabs and a New Reading List.md
@@ -2,7 +2,7 @@
 [#]: via: "https://news.itsfoss.com/vivaldi-5-1-release/"
 [#]: author: "Jacob Crume https://news.itsfoss.com/author/jacob/"
 [#]: collector: "lujun9972"
-[#]: translator: " "
+[#]: translator: "imgradeone"
 [#]: reviewer: " "
 [#]: publisher: " "
 [#]: url: " "
