--- a/sources/news/20220209 Vivaldi 5.1 Introduces Horizontal Scrollable Tabs and a New Reading List.md
+++ b/sources/news/20220209 Vivaldi 5.1 Introduces Horizontal Scrollable Tabs and a New Reading List.md
@@ -10,6 +10,8 @@
 Vivaldi 5.1 Introduces Horizontal Scrollable Tabs and a New Reading List
 ======
 
+> Vivaldi 5.1 looks like an interesting release making it a more useful browser for users dabbling with multiple browsers.
+
 Vivaldi is a pretty good option for Linux users. They focus on Linux as one of the first-party platforms, which is impressive.
 
 With [Vivaldi 5.0 release][1], it proved to be a versatile Chromium-based option for many Linux users. Now, Vivaldi 5.1 is finally here!
@@ -76,7 +78,7 @@ There are also new additions to the Android version, including the ability to tw
 
 If all these new features appeal to you, download Vivaldi 5.1 from its official website. If you are on Debian, Ubuntu, or Fedora, it’s as simple as downloading the appropriate package from Vivaldi’s website.
 
-It also offers AMR packages for 64-bit and 32-bit systems.
+It also offers ARM packages for 64-bit and 32-bit systems.
 
 [Download Vivaldi][8]
 
