--- a/sources/news/20220209 Vivaldi 5.1 Introduces Horizontal Scrollable Tabs and a New Reading List.md
+++ b/sources/news/20220209 Vivaldi 5.1 Introduces Horizontal Scrollable Tabs and a New Reading List.md
@@ -10,83 +10,81 @@
 Vivaldi 5.1 Introduces Horizontal Scrollable Tabs and a New Reading List
 ======
 
-> Vivaldi 5.1 looks like an interesting release making it a more useful browser for users dabbling with multiple browsers.
+> 对于那些接触过多款浏览器的人来说，Vivaldi 5.1 版本更新极富趣味，且更加实用。
 
-Vivaldi is a pretty good option for Linux users. They focus on Linux as one of the first-party platforms, which is impressive.
+Vivaldi 对于 Linux 用户来说是个不错的选择。他们将 Linux 平台作为其官方主力维护平台之一，这一点弥足珍贵。
 
-With [Vivaldi 5.0 release][1], it proved to be a versatile Chromium-based option for many Linux users. Now, Vivaldi 5.1 is finally here!
+在 [Vivaldi 5.0 版本][1] 中，它已经成为许多 Linux 用户喜爱且极具功能性的 Chromium 内核浏览器之选。如今，Vivaldi 5.1 也终于问世！
 
-As a browser popularized by its powerful multitasking functionality, this release should be interesting.
+作为一款凭借强大的多任务管理功能而著名的浏览器，这一新版本想必是干货满满。
 
-Let’s dive in!
+接下来就一起深入探索吧！
 
-### New Features In Vivaldi 5.1
+### Vivaldi 5.1 的新功能
 
 ![][2]
 
-Note that Vivaldi is almost an open-source browser with its source code available, except its UI.
+还是提醒一下，Vivaldi 是一款几乎开源的浏览器，它的源代码是开放给所有用户的，但用户界面并不开源。
 
-Just like its previous 5.0 release, this version brings several key improvements, including:
+和之前的 5.0 版本类似，该版本带来了一些关键性的改进，包括：
 
-  * Scrollable tabs
-  * New reading list
-  * New start page quick settings panel
+  * 可滚动的标签栏
+  * 全新的在读清单
+  * 新的开始页面快速设置面板
 
-
-
-#### Scrollable Tabs
+#### 可滚动的标签栏
 
 ![][3]
 
-With Vivaldi 5.1, you do not need to shrink all your tabs necessarily when you have a lot of them. You can simply scroll through the tabs without shrinking them.
+在 Vivaldi 5.1 中，你不必再沉没于狭窄而海量的标签之中。你可以直接滚动标签栏，无需缩小标签。
 
-Considering you have the tab bar on top or bottom, this should let you navigate tabs by scrolling your mouse or using the arrow keys.
+考虑到大多数人喜欢把标签栏放到顶部或者底部，这一新功能可以让你直接通过滚轮或者箭头键来寻找标签。
 
-I’m sure many people will be pleased to hear that this can be combined with Vivaldi’s tab stacking feature, allowing for easier finding of tabs. Yes, you can scroll through tabs on both levels.
+我敢相信，许多人听到这个功能能够与标签堆叠功能整合并进一步提高标签查找效率后，一定会很高兴的。是的，两级标签栏均可以使用标签滚动功能。
 
-This brings Vivaldi’s horizontal tabs up to scratch with its vertical tabs, which have always supported scrolling.
+这一新功能使 Vivaldi 的横向标签栏与垂直标签栏有了更高的一致性，后者已经支持滚动许久。
 
-#### Reading List
+#### 在读列表
 
 ![][4]
 
-As reading the news starts to feel like a full-time job, the inclusion of a reading list seems apt. While this has been achieved through browser extensions previously, it is built right into the browser significantly increases its convenience and usefulness.
+当阅读新闻这件事开始成为日常事务之后，设置一个在读列表会很有用。在此之前，这一功能是靠浏览器拓展实现的，而如今它已被整合到浏览器当中，大幅增强了便利性和实用性。
 
-This inclusion seems to be a continuation of Vivaldi’s constant push to add new services to its browser, replacing several common extensions and competing with the likes of Pocket on Firefox.
+这一引入看上去更像是 Vivaldi 推动浏览器增添新服务功能的一大延续，不仅取代了一些常见拓展，更试图与 Firefox 的 Pocket 等同类平台进行竞争。
 
-You can access/add pages to the reading list using keyboard shortcuts or mouse gestures.
+你可以直接通过键盘快捷键和鼠标手势来访问相应页面，或添加页面到在读列表中。
 
-#### Quick Settings For The Start Page
+#### 开始页面的快速设置
 
 ![][5]
 
-The start page has always been a key part of web browsing, and users have been customizing it for many years. Unfortunately, this often required diving deep into settings menus to find the necessary options.
+开始页面一直都是网页浏览的关键节点，用户多年来也一直在定制它。不幸的是，用户往往要深入到设置页面去寻找自己需要的选项。
 
-Now, this is set to change thanks to Vivaldi’s new start page quick settings panel. As a result, all the settings related to the start page are in one place, significantly improving the user experience.
+如今，得益于 Vivaldi 新增的开始页面快速设置面板，这种情况将成为过去式。现在，所有与开始页面有关的选项都在同一位置，大幅改进了用户体验。
 
-You can access the quick settings through the gear icon in the top-right corner of the startpage.
+你可以通过开始页面右上角的齿轮图标查看快速设置。
 
-#### Other Changes
+#### 其他变更
 
-In addition to these changes, there are various bug fixes and subtle improvements to improve the translation, mail, calendar, and feed reader.
+除了上述改进之外，还有许多 bug 修复，以及针对翻译、邮件、日历和订阅阅读器功能的细节改进。
 
-You can go through the changelog in the [announcement post][6] to know more about the technical improvements.
+你可以阅读 [版本发布公告][6] 来了解更多技术性改进。
 
-There are also new additions to the Android version, including the ability to tweak tab width and choose more colors. You can read more about it in their [blog post][7].
+Android 版本同样也新增了一些新功能，包括修改标签宽度和选择更多强调色。你可以在这篇 [博文][7] 中了解详情。
 
-### Getting Vivaldi 5.1
+### 获取 Vivaldi 5.1
 
-If all these new features appeal to you, download Vivaldi 5.1 from its official website. If you are on Debian, Ubuntu, or Fedora, it’s as simple as downloading the appropriate package from Vivaldi’s website.
+如果这些新功能很合你的胃口，您可以前往 Vivaldi 官方网站下载 Vivaldi 5.1。如果你正在使用 Debian、Ubuntu 或者 Fedora，那么很简单，直接从 Vivaldi 官网下载相应软件包就可以了。
 
-It also offers ARM packages for 64-bit and 32-bit systems.
+Vivaldi 同样也提供针对 ARM 架构的 32 位及 64 位软件包。
 
-[Download Vivaldi][8]
+[下载 Vivaldi][8]
 
-For other distros, you will, unfortunately, have to wait for Vivaldi 5.1 to land in your distro’s repositories, considering there’s no Flatpak or Snap package available for it.
+对于其他发行版，很不幸，你只能等待 Vivaldi 5.1 降临到发行版的相应仓库中，毕竟它可没有 Flatpak 和 Snap 版本。
 
-Overall, I think Vivaldi 5.1 is a massive improvement and might convince me to switch.
+总的来说，我认为 Vivaldi 5.1 是一次巨大改进，足以让我迁移主力。
 
-_What do you think about the changes introduced in Vivaldi 5.1? Let us know in the comments below!_
+_你对 Vivaldi 5.1 的更新有什么看法吗？欢迎在评论区留言，让我了解你的想法！_
 
 --------------------------------------------------------------------------------
 
@@ -94,14 +92,14 @@ via: https://news.itsfoss.com/vivaldi-5-1-release/
 
 作者：[Jacob Crume][a]
 选题：[lujun9972][b]
-译者：[译者ID](https://github.com/译者ID)
+译者：[imgradeone](https://github.com/imgradeone)
 校对：[校对者ID](https://github.com/校对者ID)
 
 本文由 [LCTT](https://github.com/LCTT/TranslateProject) 原创编译，[Linux中国](https://linux.cn/) 荣誉推出
 
 [a]: https://news.itsfoss.com/author/jacob/
 [b]: https://github.com/lujun9972
-[1]: https://news.itsfoss.com/vivaldi-5-0-release/
+[1]: https://linux.cn/article-14044-1.html
 [2]: https://i0.wp.com/i.ytimg.com/vi/I2PhNDzuTSY/hqdefault.jpg?w=780&ssl=1
 [3]: https://i0.wp.com/i.ytimg.com/vi/UeFcUWRpX-0/hqdefault.jpg?w=780&ssl=1
 [4]: data:image/svg+xml;base64,PHN2ZyBoZWlnaHQ9IjQzOSIgd2lkdGg9Ijc4MCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4=
